# cppmodules

./: CMakeLists.txt  README.md
module00/ex00/: Makefile  megaphone.cpp
module00/ex01/: Contact.cpp  Contact.hpp  Makefile  PhoneBook.cpp  PhoneBook.hpp  main.cpp
module01/ex00/: Makefile  Pony.cpp  Pony.hpp  main.cpp
module01/ex01/: Makefile  ex01.cpp  main.cpp  memleak.hpp
module01/ex02/: Makefile  UniqueZombie.cpp  UniqueZombie.hpp  Zombie.cpp  Zombie.hpp  ZombieEvent.cpp  ZombieEvent.hpp  main.cpp
module01/ex03/: Makefile  Zombie.cpp  ZombieHorde.cpp  ZombieHorde.hpp  main.cpp
module01/ex04/: Makefile  ex04.cpp
module01/ex05/: Brain.cpp  Brain.hpp  Human.cpp  Human.hpp  Makefile  main.cpp
module01/ex06/: HumanA.cpp  HumanA.hpp  HumanB.cpp  HumanB.hpp  Makefile  Weapon.cpp  Weapon.hpp  main.cpp
module01/ex07/: Makefile  main.cpp
module02/ex00/: Fixed.cpp  Fixed.hpp  Makefile  ex00  main.cpp
module02/ex01/: Fixed.cpp  Fixed.hpp  Makefile  main.cpp
module02/ex02/: Fixed.cpp  Fixed.hpp  Makefile  main.cpp
module03/ex00/: FragTrap.cpp  FragTrap.hpp  Makefile  main.cpp
module03/ex01/: BaseTrap.cpp  BaseTrap.hpp  FragTrap.cpp  FragTrap.hpp  Makefile  ScavTrap.cpp  ScavTrap.hpp  main.cpp
module03/ex02/: FragTrap.cpp  FragTrap.hpp  Makefile  ScavTrap.cpp  ScavTrap.hpp  main.cpp
module03/ex03/: ClapTrap.cpp  ClapTrap.hpp  FragTrap.cpp  FragTrap.hpp  Makefile  NinjaTrap.cpp  NinjaTrap.hpp  main.cpp
module03/ex04/: ClapTrap.hpp  FragTrap.cpp  FragTrap.hpp  Makefile  NinjaTrap.cpp  NinjaTrap.hpp  ScavTrap.cpp  ScavTrap.hpp  SuperTrap.cpp  SuperTrap.hpp  main.cpp
module04/ex00/: Makefile  Peon.cpp  Peon.hpp  Sorcerer.cpp  Sorcerer.hpp  Victim.cpp  Victim.hpp  main.cpp
module04/ex01/: AWeapon.cpp  AWeapon.hpp  Character.cpp  Character.hpp  Enemy.cpp  Enemy.hpp  Makefile  PlasmaRifle.cpp  PlasmaRifle.hpp  PowerFist.cpp  PowerFist.hpp  RadScorpion.cpp  RadScorpion.hpp  SuperMutant.cpp  SuperMutant.hpp  main.cpp
module04/ex02/: AssaultTerminator.cpp  AssaultTerminator.hpp  ISpaceMarine.hpp  ISquad.hpp  Makefile  Squad.cpp  Squad.hpp  TacticalMarine.cpp  TacticalMarine.hpp  main.cpp
module04/ex03/: AMateria.cpp  AMateria.hpp  Character.cpp  Character.hpp  Cure.cpp  Cure.hpp  ICharacter.hpp  IMateriaSource.hpp  Ice.cpp  Ice.hpp  Makefile  MateriaSource.cpp  MateriaSource.hpp  main.cpp
module05/ex00/: Bureaucrat.cpp  Bureaucrat.hpp  Makefile  main.cpp
module05/ex01/: Bureaucrat.cpp  Bureaucrat.hpp  Form.cpp  Form.hpp  Makefile  main.cpp
module05/ex02/: Bureaucrat.cpp  Bureaucrat.hpp  Form.cpp  Form.hpp  Makefile  RobotomyRequestForm.cpp  RobotomyRequestForm.hpp  ShrubberyCreationForm.cpp  main.cpp  treefile
module05/ex03/: Form.hpp  Intern.cpp  Intern.hpp  Makefile  PresidentialPardonForm.cpp  PresidentialPardonForm.hpp  ShrubberyCreationForm.hpp  main.cpp
module06/ex00/: Makefile  main.cpp
module06/ex01/: Makefile  main.cpp
module06/ex02/: A.cpp  A.hpp  B.cpp  B.hpp  Base.cpp  Base.hpp  C.cpp  C.hpp  Makefile  main.cpp
module07/ex00/: Makefile  whatever.cpp
module07/ex01/: Makefile  iter.cpp
module07/ex02/: Array.hpp  Makefile  main.cpp
module08/ex00/: easyfind.hpp  main.cpp
module08/ex01/: Makefile  main.cpp  span.cpp  span.hpp
(+4 files in other folders)
